Added Halloween Logo!

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 				<a id="account_link" href="https://accounts.google.com/SignOutOptions?hl=en&continue=https://www.google.com/"><div id="account"></div></a>
 			</div></div>
 		
-		<div id="canvas">Canvas</div>	
+		<div id="canvas"><div id="hplogo" tabindex="0" title="Happy Halloween!" dir="ltr"></div></div>
+
 		<div>Search Box</div>
+		
 		<div id="footer">Footer</div>
 	</body>
 </html>
