Added searchbox with buttons.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,18 @@
 		
 		<div id="canvas"><div id="hplogo" tabindex="0" title="Happy Halloween!" dir="ltr"></div></div>
 
-		<div>Search Box</div>
-		
+		<form id="searchForm">
+			<div id="fauxSearch">
+				<div id="voice"></div>
+				<input id="search"></input>
+			</div>
+
+			<div id="buttons">
+				<div id="searchButton"><a href="secretkosmonaut.github.io/google_homepage">Google Search</a></div>
+				<div id="luckyButton"><a href="secretkosmonaut.github.io/google_homepage">I'm Feeling Lucky</a></div>
+			</div>
+		</form>	
+
 		<div id="footer">Footer</div>
 	</body>
 </html>
