Resolving link error on button. #2

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 			</div>
 
 			<div id="buttons">
-				<div id="searchButton"><a href="https://secretkosmonaut.github.io/google_homepage/">Google Search</a></div>
-				<div id="luckyButton"><a href="https://secretkosmonaut.github.io/google_homepage/">I'm Feeling Lucky</a></div>
+				<div id="searchButton"><a href="secretkosmonaut.github.io/google_homepage">Google Search</a></div>
+				<div id="luckyButton"><a href="secretkosmonaut.github.io/google_homepage">I'm Feeling Lucky</a></div>
 			</div>
 		</form>	
 
