Finished footer and webpage clone!

--- a/index.html
+++ b/index.html
@@ -27,8 +27,21 @@
 				<div id="searchButton"><a href="secretkosmonaut.github.io/google_homepage">Google Search</a></div>
 				<div id="luckyButton"><a href="secretkosmonaut.github.io/google_homepage">I'm Feeling Lucky</a></div>
 			</div>
-		</form>	
+		</form>
 
-		<div id="footer">Footer</div>
+		<p>See what costumes will haunt your neighborhood tonight with <a href="https://www.google.com/url?q=https://frightgeist.withgoogle.com/&source=hpp&id=19001023&ct=3&usg=AFQjCNEJTVJvpvhBDXNxf7jn5TLJRil36Q&sa=X&ved=0ahUKEwjQn_nQxobQAhUq5YMKHW0pDZ8Q8IcBCAo">Frightgeist</a></p>	
+
+		<div id="footer">
+			<div class="left">
+				<div>Advertising</div>
+				<div>Business</div>
+				<div>About</div>
+			</div>
+			<div class="right">
+				<div>Privacy</div>
+				<div>Terms</div>
+				<div>Settings</div>
+			</div>
+		</div>
 	</body>
 </html>
