--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<header>
+	<head>
 		<title>Google</title>
 		<link type="text/css" rel="stylesheet" href="css/main.css"/>
-	</header>
+		<link rel="shortcut icon" href="images/favicon.ico" />
+	</head>
 
 	<body>
 		<div id="header">
